--- a/ngnix.conf
+++ b/ngnix.conf
@@ -19,12 +19,8 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /static/ {
-            alias /app/static/;
-        }
-
-        location /ws/ {
-            proxy_pass http://app_server;
+        location /ws/drivers {
+            proxy_pass http://app_server/ws/drivers;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
@@ -32,6 +28,29 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /ws/users {
+            proxy_pass http://app_server/ws/users;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /api/ {
+            proxy_pass http://app_server/api/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /static/ {
+            alias /app/static/;
         }
 
         limit_req_zone $binary_remote_addr zone=one:10m rate=5r/s;
