--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   backend:
     build: .
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000
+    command: gunicorn app.main:app_sio -k eventlet -w 1 -b 0.0.0.0:8000
     ports:
       - "8000:8000"
     depends_on:
@@ -13,7 +13,7 @@ services:
       - celery_worker
       - celery_beat
     environment:
-      - DATABASE_URL=postgresql://user:password@postgres:5432/logistics
+      - DATABASE_URL=postgresql://user:password@pgbouncer:6432/logistics
       - REDIS_URL=redis://redis:6379/0
       - KAFKA_URL=kafka:9092
       - SECRET_KEY=${SECRET_KEY}
