--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,17 +65,26 @@ services:
       - "6379:6379"
 
   kafka:
-    image: wurstmeister/kafka
-    environment:
-      KAFKA_ADVERTISED_HOST_NAME: kafka
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+    image: confluentinc/cp-kafka:latest
+    depends_on:
+      - zookeeper
     ports:
       - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
 
   zookeeper:
-    image: wurstmeister/zookeeper
+    image: confluentinc/cp-zookeeper:latest
     ports:
       - "2181:2181"
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
 
   nginx:
     image: nginx:latest
@@ -102,6 +111,16 @@ services:
       - SCALE_UP_THRESHOLD=100
       - SCALE_DOWN_THRESHOLD=10
       - CHECK_INTERVAL=60
+
+  location_consumer:
+    build: .
+    command: python app/services/tracking/location_consumer.py
+    depends_on:
+      - kafka
+      - redis
+    environment:
+      - KAFKA_URL=kafka:29092
+      - REDIS_URL=redis://redis:6379/0
 
 volumes:
   postgres_data:
