--- a/kubernetes/base/celery-deployment.yaml
+++ b/kubernetes/base/celery-deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: celery
+  labels:
+    app: celery
 spec:
   replicas: 2
   selector:
@@ -14,7 +16,7 @@ spec:
     spec:
       containers:
       - name: celery
-        image: your-registry/logistics-platform-celery:latest
+        image: ${CELERY_IMAGE}:${CELERY_TAG}
         envFrom:
         - configMapRef:
             name: backend-config
@@ -25,3 +27,19 @@ spec:
           limits:
             cpu: 500m
             memory: 512Mi
+        readinessProbe:
+          exec:
+            command:
+            - celery
+            - inspect
+            - ping
+          initialDelaySeconds: 15
+          periodSeconds: 10
+        livenessProbe:
+          exec:
+            command:
+            - celery
+            - inspect
+            - ping
+          initialDelaySeconds: 30
+          periodSeconds: 30
