--- a/kubernetes/config/backend-config.yaml
+++ b/kubernetes/config/backend-config.yaml
@@ -7,3 +7,6 @@ SECRET_KEY: your-secret-key
 ALGORITHM: HS256
 ACCESS_TOKEN_EXPIRE_MINUTES: 30
 GOOGLE_MAPS_API_KEY: your-google-maps-api-key
+
+
+# refer to env.example file to see the variables that are used in the project 
